--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,12 @@
         "simple-bus/doctrine-orm-bridge": "^4.0"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
+        "behat/behat": "^3.0",
+        "behat/symfony2-extension": "^2.1",
+        "behat/mink": "^1.7",
+        "behat/mink-extension": "^2.2",
+        "behat/mink-browserkit-driver": "^1.3"
     },
     "scripts": {
         "post-install-cmd": [
